display cards immediately after the page is loaded

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
     <link rel="stylesheet" href="css/app.css">
 </head>
-<body>
+<!--Display the displayCards JavaScript function immediately after a page has been loaded, based on the definition from w3schools.com-->
+<body onload="displayCards()">
 
     <div class="container">
         <header>
@@ -30,7 +31,7 @@
         </section>
 
         <ul class="deck">
-            <!--move the entire li set to app.js and transform it to a list-->
+            <!--Move the entire li set to app.js and transform it to a list-->
         </ul>
     </div>
 
