set initial number of moves to 0

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         		<li><i class="fa fa-star"></i></li>
         		<li><i class="fa fa-star"></i></li>
         	</ul>
-
-        	<span class="moves">3</span> Moves
+			<!--Change initial number of moves to 0.-->
+        	<span class="moves">0</span> Moves
 
             <div class="restart">
         		<i class="fa fa-repeat"></i>
@@ -31,7 +31,7 @@
         </section>
 
         <ul class="deck">
-            <!--Move the entire li set to app.js and transform it to a list-->
+            <!--Move the entire li set to app.js and transform it to a list.-->
         </ul>
     </div>
 
