--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         		<li><i class="fa fa-star"></i></li>
         	</ul>
 			<!--Change initial number of moves to 0.-->
-        	<span class="moves">0</span> Moves
+        	<span class="moves" id="moves">0</span> Moves
 
             <div class="restart">
         		<i class="fa fa-repeat"></i>
