add restart function

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         		<li><i class="fa fa-star"></i></li>
         		<li><i class="fa fa-star"></i></li>
         	</ul>
-			<!--Change initial number of moves to 0.-->
+			<!--Change initial number of moves to 0 and add id moves, for the JavaScript updateMoveCounter function.-->
         	<span class="moves" id="moves">0</span> Moves
 
             <div class="restart">
