--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Matching Game</title>
     <meta name="description" content="">
     <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
-    <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
+    <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Ewert">
     <link rel="stylesheet" href="css/app.css">
 </head>
 <!--Display the displayCards JavaScript function immediately after a page has been loaded, based on the definition from w3schools.com-->
@@ -34,6 +34,8 @@
             <!--Move the entire li set to app.js and transform it to a list.-->
         </ul>
     </div>
+
+
 
     <script src="js/app.js"></script>
 </body>
