add time counter functions

--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
         		<li><i class="fa fa-star"></i></li>
         		<li><i class="fa fa-star"></i></li>
         	</ul>
-			<!--Change initial number of moves to 0 and add id moves, for the JavaScript updateMoveCounter function.-->
-        	<span class="moves" id="moves">0</span> Moves
+			<!--Change initial number of moves to 0, for the JavaScript updateMoveCounter function.-->
+        	<span class="moves">0</span> Moves
+            <!--Create span for the timer -->
+             <span class="moves" id="time">0</span> Seconds
 
             <div class="restart">
         		<i class="fa fa-repeat"></i>
